@@ -17,23 +17,23 @@ foreach my $role (qw/
     my $meta = Moose::Meta::Class->create_anon_class(
         superclasses => ['Moose::Object'],
     );
-    $meta->add_attribute('Debug', traits => ['Getopt'], isa => 'Bool',
+    $meta->add_attribute('debug', traits => ['Getopt'], isa => 'Bool',
         cmd_aliases => ['d'], is => 'ro');
     $role->meta->apply($meta);
 
-    ok($meta->name->new_with_options({ argv => ['-d'] })->Debug,
-        "Debug was set for argv -d on $role");
+    ok($meta->name->new_with_options({ argv => ['-d'] })->debug,
+        "debug was set for argv -d on $role");
     {
         local @ARGV = ('-d');
-        ok($meta->name->new_with_options()->Debug,
-            "Debug was set for ARGV on $role");
+        ok($meta->name->new_with_options()->debug,
+            "debug was set for ARGV on $role");
     }
 
-    ok($meta->name->new_with_options({ argv => ['--Debug'] })->Debug,
-        "Debug was set for argv --Debug on $role");
+    ok($meta->name->new_with_options({ argv => ['--debug'] })->debug,
+        "debug was set for argv --debug on $role");
 
-    ok($meta->name->new_with_options({ argv => ['--debug'] })->Debug,
-        "Debug was set for argv --debug on $role");
+    ok($meta->name->new_with_options({ argv => ['--debug'] })->debug,
+        "debug was set for argv --debug on $role");
 }
 
 done_testing;
